--- a/public/bundle.css
+++ b/public/bundle.css
@@ -6961,4 +6961,7 @@ h3 {
   padding: 0px 5px;
   border-radius: 50%; }
 
+.day-container {
+  padding: 0; }
+
 /*# sourceMappingURL=bundle.css.map*/
